<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>elastic-memory</name>
    <groupId>com.hazelcast</groupId>
    <artifactId>elastic-memory</artifactId>
    <packaging>jar</packaging>
    <version>2.1</version>
    <properties>
        <hazelcast.version>2.1</hazelcast.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.5</jdk.version>
        <target.dir>target</target.dir>
    </properties>
    <licenses>
        <license>
            <name>Commercial License</name>
            <url>http://www.hazelcast.com/licenses/LICENSE.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>
    <organization>
        <name>Hazel Bilisim Ltd.</name>
        <url>http://www.hazelcast.com/</url>
    </organization>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.0-alpha-2</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <files>
                                <file>build.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <archive>
                        <index>true</index>
                        <compress>true</compress>
                        <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.11</version>
                <configuration>
                    <argLine>-Xms128m -Xmx512m -XX:MaxPermSize=128M
                        -Dhazelcast.version.check.enabled=false
                        -Dhazelcast.mancenter.enabled=false
                        -Dhazelcast.enterprise.license.key=${license.key}
                        -Dhazelcast.elastic.memory.enabled=true
                        -Dhazelcast.elastic.memory.total.size=128m
                        -Dhazelcast.elastic.memory.chunk.size=1k
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <version>${hazelcast.version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-client</artifactId>
            <version>${hazelcast.version}</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- reuse src/test/java code! -->
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast</artifactId>
            <scope>test</scope>
            <version>${hazelcast.version}</version>
            <classifier>tests</classifier>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>